--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <title>Gestão agronegocios</title>
 </head>
 <body>
-    <header>
+    <header class="cabeçalho">
         <img src="cabeçario.png" alt="imagem ilustrativa ">
     </header>
-    <section> <p>
+    <section class="Convidar"> 
+        <p class="convidar-texto1">
         Para você que esta terminando o ensino médio, 
         e esta interessado em agronomia, e quer engressar
          neste ramo, tem algumas faculdade estão ofertando
          bolsas  de estudos, para saber mas clique "aqui"
-    </p>
-    <p>Para você que esta interesado em fazer gestão agricula 
+        </p>
+         <p class="convidar-texto2">Para você que esta interesado em fazer gestão agricula 
         aqui esta algumas faculdades que estão disponibilizando 
         algumas bolsas: unopar, unifil e uniasselvi . </p>
         <p> Em agronomia aqui tem 
@@ -27,7 +28,7 @@
         <img src="image.png" alt="imagem de uma lavoura">
     </section>
 
-    <section>
+    <section class="regras">
         <h1>Regras da Bolsa</h1>
         <h3>Quem pode ter a vaga do Quero bolsa?</h3>
         <ul>
